<resources>

    <string name="app_name">IDEA app</string>
    <string name="cargando">Cargando</string>
    <string name="end_cargando">Carga finalizada</string>
    <string name="no_internet_message_refresh">No hay conexión a Internet para refrescar la aplicación.</string>
    <string name="url_connection_check">www.parse.com</string>
    <string name="log_off_confirmation">Está seguro que desea cerrar sesión en la aplicación?</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!--Login-->
    <string name="nombre_usuario">Usuario</string>
    <string name="password">Contraseña</string>
	<string name="ingresar">Ingresar</string>
	<string name="fallo_login">Fallo al autentificarse en el servidor, verifique conexion y datos</string>
	<string name="vacio_login">Nombre de usuario y/o contraseña vacios</string>
    <!--Fin Login-->

    <!--Dashboard-->
    <string name="nuevo_pedido_button_text">Nuevo Pedido +</string>

    <string name="codigo">Codigo</string>
    <string name="meta">Meta</string>
    <string name="metas">Metas</string>
    <string name="facturado">Facturado</string>
    <string name="Bs">Monto (Bs.)</string>

    <string name="pedidos">Pedidos</string>
    <string name="pedidos_banner_text">Pedido</string>
    <!--Fin Dashboard-->

    <!--Row Pedido-->
    <string name="dialog_continuar_button">Continuar</string>
    <string name="dialog_cancelar_button">Cancelar</string>
    <string name="rechazado_dialog_title">Editar Pedido Rechazado</string>
    <string name="rechazado_dialog_message">Editar este pedido cambiará su estado a \"Verificando\". Desea Continuar? Necesita de una conexión activa a Internet para realizar esta acción.</string>
    <string name="verificando_dialog_title">Editar Pedido Esperando Verificacion</string>
    <string name="verificando_dialog_message">Esta seguro que desea editar pedido en espera de Verificación? Necesita de una conexión activa a Internet para realizar esta acción.</string>
    <string name="copiar_dialog_title">Crear Nuevo Pedido</string>
    <string name="copiar_dialog_message">Crear nuevo pedido copiando el contenido del pedido seleccionado? Necesita de una conexión activa a Internet para realizar esta acción. </string>
    <string name="obs_rechazo_pedido_alert_title">Observaciones por rechazo de pedido:</string>
    <string name="empty_obs_rechazo_pedido">No hay Observaciones para este Pedido</string>
    <!--Fin Row Pedido-->

    <!--Filtro Catalogo-->
    <string name="categorias">Categorias</string>
    <string name="marcas">Marcas</string>
    <string name="todas">Todas</string>
    <!--Fin Filtro Catalogo-->

    <!--Descuento Manual-->
    <string name="titulo_descuento_manual">Establecer Descuento Manual</string>
    <string name="descuento_manual">%Descuento</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="excedentes_label">Excedentes: </string>
    <!--Fin Descuento Manual-->

    <!--Banner Catalogo-->
    <string name="nombre_producto_label">Nombre del Producto:</string>
    <string name="meta_restante_label">Meta Restante: </string>
    <string name="agregar_descuento">Agregar Descuento</string>
    <string name="descuentos_producto">Descuentos Producto</string>
    <string name="descuentos_categoria">Descuentos Categoria</string>
    <string name="descuentos_grupo">Descuentos Grupo</string>
    <!--Fin Banner Catalogo-->

    <!--Banner Carrito-->
    <string name="warning_agregar_elementos_carrito">Debe agregar elementos en el carrito</string>
    <string name="M">M</string>
    <!--Fin Banner Carrito-->

    <!--Detalle Producto-->
    <string name="categoria_label">Categoria:</string>
    <string name="grupo_categorias_label">Grupo de Categorias:</string>
    <string name="descripcion_label">Descripción:</string>
    <!--Fin Detalle Producto-->

    <!--GestionPedido-->
    <string name="fecha">Fecha</string>
    <string name="idCliente">ID de Cliente</string>
    <string name="nombreCliente">Nombre de Cliente</string>
    <string name="numeroOrdenCompra">Orden de compra #</string>
    <string name="direccionEnvio">Dirección de Envío</string>
    <string name="direccion_envio_hint">Ingrese direccion de envio aqui</string>

    <string name="producto">Producto</string>
    <string name="cantidad">Cant.</string>
    <string name="exced">Exced.</string>
    <string name="precioUnitario">P. Unitario</string>
    <string name="precioDescComercial">P. Comercial</string>
    <string name="descuentoVolumen">Desc.</string>
    <string name="precioTotal">Precio Total</string>

    <string name="subtotal">Subtotal</string>
    <string name="impuesto">Impuesto</string>
    <string name="total">TOTAL</string>

    <string name="observaciones">Observaciones</string>
    <string name="observaciones_pedido_hint">Agregue observaciones sobre el pedido aqui</string>

    <string name="botonPedido">Finalizar Pedido</string>
    <string name="subiendoPedido">Subiendo Pedido a la nube. Por favor espere.</string>
    <string name="no_internet_subiendoPedido">No se dispone de conexión a internet. Su Pedido será subido a la nube al estar disponible.</string>
    <string name="pedidoCompletado">Pedido Completado exitosamente</string>
    <string name="detalle_producto_header">Detalles del Producto</string>
    <string name="producto_already_in_carrito">El producto ya se encuentra en el Carrito</string>
    <string name="producto_not_available">No hay disponibilidad del producto</string>
    <string name="productos_cargados">Finalizada carga de productos</string>
    <string name="sd_card_unavailable">Tarjeta SD no disponible</string>
    <!--Fin Gestion Pedidos-->

</resources>