<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detalle_producto_inflated"
    style="@style/row_light"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/selector_detalle_menu"
    android:fillViewport="true"
    android:minHeight="1280dp" android:padding="20dp">

    <!--Titulo Activity-->
    <RelativeLayout
        android:id="@+id/gestion_header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/gestion_header_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="Gestión de pedidos"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/gestion_header_star_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/gestion_header_text_view"
            android:src="@drawable/client_img_estrella" />

    </RelativeLayout>

    <!--Encabezado de pedido-->
    <TableLayout
        android:id="@+id/encabezado_pedido_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gestion_header_layout"
        android:layout_marginTop="25dp">

        <!--Fecha   DD/MM/YYYY-->
        <TableRow>
            <TextView
                style="@style/encabezado"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="0.3"
                android:padding="18dip"
                android:text="@string/fecha"/>
            <TextView
                android:id="@+id/fecha_edit"
                style="@style/titulo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:layout_weight="0.6"
                android:padding="18dip"/>
        </TableRow>

        <!--ID de Cliente-->
        <TableRow>
            <TextView
                style="@style/encabezado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="0.3"
                android:padding="18dip"
                android:text="@string/idCliente"/>
            <TextView
                android:id="@+id/id_cliente_edit"
                style="@style/titulo"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:layout_weight="0.6"
                android:padding="18dip"/>
        </TableRow>

        <!--Nombre de Cliente-->
        <TableRow>
            <TextView
                style="@style/encabezado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="0.3"
                android:padding="18dip"
                android:text="@string/nombreCliente"/>
            <TextView
                android:id="@+id/nombre_cliente_edit"
                style="@style/titulo"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:layout_weight="0.6"
                android:padding="18dip"/>
        </TableRow>

        <!--Orden de Compra     #orden-->
        <TableRow>
            <TextView
                style="@style/encabezado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="0.3"
                android:padding="18dip"
                android:text="@string/numeroOrdenCompra"/>
            <TextView
                android:id="@+id/numero_orden_compra_edit"
                style="@style/titulo"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:layout_weight="0.6"
                android:padding="18dip"/>
        </TableRow>

        <!--Direccion de Envío-->
        <TableRow>
            <TextView
                style="@style/encabezado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="0.3"
                android:padding="18dip"
                android:text="@string/direccionEnvio"/>
            <EditText
                android:id="@+id/direccion_envio_edit"
                style="@style/edit_text"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="0.6"
                android:hint="@string/direccion_envio_hint"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLength="240"
                android:maxLines="2" android:maxWidth="220dp" android:minLines="2"
                android:padding="@dimen/list_item_padding"/>
        </TableRow>

    </TableLayout>

    <!--Listado de productos del pedido-->
    <!--android:layout_height="450dp"-->
    <RelativeLayout
        android:id="@+id/listado_productos_table_container"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/encabezado_pedido_table"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp">
        <TableLayout
            android:id="@+id/encabezado_listado_productos_pedido_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:id="@+id/row_productos"
                android:layout_width="match_parent">
                <TextView
                    style="@style/encabezado"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding"
                    android:text="@string/producto" />
                <TextView
                    style="@style/encabezado"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="18dip"
                    android:text="@string/cantidad"/>
                <TextView
                    style="@style/encabezado"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding"
                    android:text="@string/precioUnitario"/>
                <TextView
                    style="@style/encabezado"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding"
                    android:text="@string/precioDescComercial"/>
                <TextView
                    style="@style/encabezado"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding"
                    android:text="@string/descuentoVolumen"/>
                <TextView
                    style="@style/encabezado"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/list_item_padding"
                    android:text="@string/precioTotal"/>
            </TableRow>
        </TableLayout>

        <ListView
            android:id="@+id/productos_pedido_listView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@+id/encabezado_listado_productos_pedido_table"
            android:drawSelectorOnTop="false" />

    </RelativeLayout>

    <!--Observaciones-->
    <RelativeLayout
        android:id="@+id/obs_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listado_productos_table_container"
        android:layout_toLeftOf="@+id/totales_pedido_table"
        android:paddingRight="18dip">
        <TextView
            android:id="@+id/obs_titulo"
            style="@style/encabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:padding="10dp" android:text="@string/observaciones" android:textAlignment="center"/>
        <EditText
            android:id="@+id/obs_editText"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/obs_titulo"
            android:layout_gravity="left"
            android:hint="@string/observaciones_pedido_hint"
            android:inputType="textMultiLine"
            android:lines="6"
            android:maxLines="6" android:textAlignment="viewStart"
            android:paddingLeft="@dimen/list_item_padding" />
    </RelativeLayout>

    <!--Totales del pedido-->
    <TableLayout
        android:id="@+id/totales_pedido_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/listado_productos_table_container"
        android:paddingBottom="35dp">
        <TableRow>
            <TextView
                style="@style/titulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:padding="18dip"
                android:text="@string/subtotal"/>
            <TextView
                android:id="@+id/subtotal_edit"
                style="@style/row_light"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:padding="18dip"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="0.5dp"
                android:background="#ffffff"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                style="@style/titulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:padding="18dip"
                android:text="@string/impuesto"/>
            <TextView
                android:id="@+id/impuesto_edit"
                style="@style/row_light"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:padding="18dip"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="4dp"
                android:background="#ffffff"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                style="@style/titulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:padding="18dip"
                android:text="@string/total"/>
            <TextView
                android:id="@+id/total_edit"
                style="@style/row_light"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:padding="18dip"/>
        </TableRow>


    </TableLayout>
    <Button
        android:id="@+id/finalizarPedidoButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/totales_pedido_table"
        android:gravity="center"
        android:onClick="commitPedido"
        android:text="@string/botonPedido" android:textSize="20dp"/>

</RelativeLayout>
