<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="600dp"
        android:id="@+id/productos_pedido_aprobado_scrollView"
        >
    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp" android:layout_alignParentTop="true" android:layout_marginTop="0dp"
                android:id="@+id/encabezado_tableLayout">
            <TableRow
                    android:id="@+id/encabezado_productos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/producto"
                        android:layout_span="1"
                        android:padding="18dip"
                        android:layout_weight="0.4"
                        style="@style/encabezado"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cantidad"
                        android:layout_span="1"
                        android:padding="18dip"
                        android:layout_weight="0.05"
                        style="@style/encabezado"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/precioUnitario"
                        android:layout_span="1"
                        android:padding="18dip"
                        android:layout_weight="0.15"
                        style="@style/encabezado"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descuentoVolumen"
                        android:layout_column="2"
                        android:padding="18dip"
                        android:layout_weight="0.1"
                        style="@style/encabezado"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/precioTotal"
                        android:layout_span="1"
                        android:padding="18dip"
                        android:layout_weight="0.15"
                        style="@style/encabezado"/>
            </TableRow>
        </TableLayout>
        <TableLayout
                android:id="@+id/productos_pedido_aprobado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_alignParentLeft="false"
                android:layout_marginLeft="0dp" android:layout_alignParentTop="false" android:layout_marginTop="54dp"
                android:layout_below="@+id/encabezado_tableLayout">
        </TableLayout>
        <TableLayout android:id="@+id/totales_tableLayout"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="35dp"
                     android:layout_alignParentLeft="false"
                     android:layout_marginLeft="0dp"
                     android:layout_marginTop="54dp"
                     android:layout_below="@+id/productos_pedido_aprobado">
            <TableRow android:layout_height="wrap_content">
                <TextView
                        style="@style/titulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subtotal"
                        android:layout_span="1"
                        android:padding="18dp"/>
                <TextView
                        android:id="@+id/subtotal_edit_aprobado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:padding="18dip" android:textColor="#FFFFFF"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView android:layout_height="0.5dp" android:background="#ffffff"
                          android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:gravity="center_horizontal">
                <TextView style="@style/titulo" android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/impuesto" android:layout_span="1" android:padding="18dip"/>
                <TextView android:id="@+id/impuesto_edit_aprobado" android:layout_width="match_parent"
                          android:layout_height="wrap_content" android:layout_span="1" android:padding="18dip"
                          android:textColor="#FFFFFF"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView android:layout_height="2dp" android:background="#ffffff" android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:gravity="center_horizontal">
                <TextView style="@style/titulo" android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/total" android:layout_span="1" android:padding="18dip"/>
                <TextView android:id="@+id/total_edit_aprobado" android:layout_width="fill_parent"
                          android:layout_height="wrap_content" android:layout_span="1" android:padding="18dip"
                          android:textColor="#FFFFFF"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>