<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
    android:id="@+id/productos_pedido_aprobado_scrollView"
        >
    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="#3f3f3f">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/pedido_aprobado_preview_pedido_number_textView"
            android:padding="10dp"
            android:textStyle="bold|italic"
            android:textColor="#ffffff" />

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp" android:layout_alignParentTop="false" android:layout_marginTop="0dp"
                android:id="@+id/encabezado_tableLayout"
            android:layout_below="@+id/pedido_aprobado_preview_pedido_number_textView"
            android:weightSum="13">
            <TableRow
                    android:id="@+id/encabezado_productos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/producto"
                        android:layout_span="1"
                        android:padding="18dip"
                        android:layout_weight="3"
                        style="@style/Pedido.Preview.Encabezado"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cantidad"
                        android:layout_span="1"
                        android:padding="18dip"
                        android:layout_weight="2"
                        style="@style/Pedido.Preview.Encabezado"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exced"
                        android:layout_span="1"
                        android:padding="18dip"
                        android:layout_weight="2"
                        style="@style/Pedido.Preview.Encabezado"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/precioUnitario"
                        android:layout_span="1"
                        android:padding="18dip"
                        android:layout_weight="3"
                        style="@style/Pedido.Preview.Encabezado"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descuentoVolumen"
                        android:layout_column="2"
                        android:padding="18dip"
                        android:layout_weight="2"
                        style="@style/Pedido.Preview.Encabezado"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/precioTotal"
                        android:layout_span="1"
                        android:padding="18dip"
                        android:layout_weight="3"
                        style="@style/Pedido.Preview.Encabezado"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/productos_pedido_aprobado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/encabezado_tableLayout"
            android:weightSum="13">
        </TableLayout>

        <RelativeLayout
            android:id="@+id/totales_tableLayout"
            android:layout_alignParentRight="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:layout_marginBottom="35dp"
            android:layout_below="@+id/productos_pedido_aprobado"
            android:background="#808080"
            >
            <TextView
                style="@style/Pedido.Preview.Totales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtotal"
                android:id="@+id/preview_subtotal_label_textView"
                android:layout_alignParentLeft="true" android:textStyle="bold"/>
            <TextView
                android:id="@+id/preview_subtotal_textView"
                android:layout_width="100dp"
                style="@style/Pedido.Preview.Totales"
                android:layout_alignParentRight="true" android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/preview_subtotal_label_textView"/>
            <TextView
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_below="@+id/preview_subtotal_textView"
                android:id="@+id/preview_subtotal_divider" android:layout_alignParentEnd="false"
                android:background="#FFF"/>

            <TextView
                style="@style/Pedido.Preview.Totales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/impuesto"
                android:id="@+id/preview_impuesto_label_textView"
                android:layout_below="@+id/preview_subtotal_divider"
                android:layout_alignParentLeft="true" android:textStyle="bold"/>
            <TextView
                android:id="@+id/preview_impuesto_textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="18dp"
                style="@style/Pedido.Preview.Totales"
                android:layout_below="@+id/preview_subtotal_divider"
                android:layout_alignParentRight="true" android:layout_toRightOf="@+id/preview_impuesto_label_textView"/>
            <TextView
                android:layout_height="2dp"
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:id="@+id/preview_impuesto_divider" android:layout_below="@+id/preview_impuesto_textView"/>

            <TextView
                style="@style/Pedido.Preview.Totales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:padding="18dip" android:id="@+id/preview_total_label_textView"
                android:layout_below="@+id/preview_impuesto_divider"
                android:layout_alignParentLeft="true" android:textStyle="bold"/>
            <TextView
                android:id="@+id/total_edit_aprobado"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textColor="#FFFFFF" style="@style/Pedido.Preview.Totales"
                android:layout_below="@+id/preview_impuesto_divider" android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/preview_total_label_textView"/>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>